--- a/index.html
+++ b/index.html
@@ -10,31 +10,38 @@
 
     <title>Portfolio</title>
   </head>
-<!-- nav bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"><i>Christopher Derteano</i></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">About</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-        </li>
-      </ul>
-    </div>
-  </nav>
+
 
   <body>
+
+    <header>
+
+        <!-- nav bar -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#"><i>Christopher Derteano</i></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">About</a>
+              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+              </li>
+            </ul>
+          </div>
+        </nav>
+
+    </header>
+<main>
       <!-- About me section start -->
       <div class="container">
           <div class="row">
@@ -51,15 +58,15 @@
     <div class="col-md-3 mt-3">
         <img class="card-img-top" src="https://scontent-iad3-1.xx.fbcdn.net/v/t31.0-8/12698682_225673281115324_284473981008098340_o.jpg?_nc_cat=108&_nc_sid=174925&_nc_ohc=33bF5LV5AqMAX9ugIVU&_nc_ht=scontent-iad3-1.xx&oh=0b4ba6674550935267c62b9e8c233a28&oe=5F7DF3A5" alt="sun">
     </div>
-    <div class="col-md-9 mt-3">
-        
-<p>I am a graduate of NC State University with a concentration in Analytical Chemistry. I have worked in the Pharma Industry for about 4 years and have recently decided to persue
-my passion in <abbr title="Software Engineering">SE</abbr>/coding. I have a strong analytical background thanks to my many years in the Pharma Indsutry. I also am a self motivating
-individual with great time management skills. I look forward to utilizing all the skills I have learned in the past in my future endevours.
-</p>
+            <div class="col-md-9 mt-3">
+                
+                  <p>I am a graduate of NC State University with a concentration in Analytical Chemistry. I have worked in the Pharma Industry for about 4 years and have recently decided to persue
+                  my passion in <abbr title="Software Engineering">SE</abbr>/coding. I have a strong analytical background thanks to my many years in the Pharma Indsutry. I also am a self motivating
+                  individual with great time management skills. I look forward to utilizing all the skills I have learned in the past in my future endevours.
+                  </p>
 
 
-    </div>
+            </div>
 
     <section class="row">
         <nav class="col-md-12">
@@ -90,7 +97,7 @@ individual with great time management skills. I look forward to utilizing all th
 
 <!-- container div underneath -->
 </div>
-   
+</main>
 
 
 
