added some styling to the portfolio footer

--- a/contact.html
+++ b/contact.html
@@ -141,12 +141,13 @@
     </section>
     <!--Section: Contact v.2-->
   </main>
-
-  <footer class="text-center">
+  
+  <footer class="text-center bg-dark">
 
     &copy; Chrsitopher Derteano
 
   </footer>
+
 
 
   <!-- Optional JavaScript -->
