added a background to container and body

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 
   <main>
     <!--Section: Contact v.2-->
-    <section class="container">
+    <section class="container" id='contact-background'>
 
       <!--Section heading-->
       <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
@@ -141,7 +141,7 @@
     </section>
     <!--Section: Contact v.2-->
   </main>
-  
+
   <footer class="text-center bg-dark">
 
     &copy; Chrsitopher Derteano
