--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <main class="mt-5" id="change">
     <!-- About me section start -->
-    <div class="container">
+    <div class="container" id='aboutme-background'>
       <div class="row">
         <div class="col-md-9 mt-3">
           <h1>About me
@@ -65,11 +65,11 @@
       <!-- second section with image -->
       <div class="row">
         <div class="col-md-3 mt-3">
-          <img class="card-img-top"
+          <img class="card-img-top pull-left"
             src="https://scontent-iad3-1.xx.fbcdn.net/v/t31.0-8/12698682_225673281115324_284473981008098340_o.jpg?_nc_cat=108&_nc_sid=174925&_nc_ohc=33bF5LV5AqMAX9ugIVU&_nc_ht=scontent-iad3-1.xx&oh=0b4ba6674550935267c62b9e8c233a28&oe=5F7DF3A5"
             alt="sun">
         </div>
-        <div class="col-md-9 mt-3 col-sm-11">
+        <div class="col-md-9 mt-3 col-sm-11 pull-left">
 
           <p>I am a graduate of NC State University with a concentration in Analytical Chemistry. I have worked in the
             Pharma Industry for about 4 years and have recently decided to persue
@@ -77,6 +77,12 @@
             thanks to my many years in the Pharma Indsutry. I also am a self motivating
             individual with great time management skills. I look forward to utilizing all the skills I have learned in
             the past in my future endevours.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati cupiditate molestias est, et
+            autem atque voluptatum minima!. A sapiente totam aspernatur repellat cupiditate deserunt nam quidem illo,
+            voluptate ratione!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium expedita blanditiis quaerat minus quasi
+            repellat fugit, consequatur quam enim veniam nemo facere a, ducimus laborum? Quod officia maiores
+            repudiandae cupiditate!
           </p>
 
 
