--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,13 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title>Portfolio</title>
+
 </head>
 
 
 <body>
+
+  </div>
   <header>
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -24,6 +27,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
+
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
@@ -34,7 +38,7 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">About</a>
           </li>
-        
+
           </li>
         </ul>
       </div>
@@ -42,17 +46,17 @@
   </header>
 
 
-  <main id="portfoliomain">
-    <div class="container ">
+  <main>
+    <div class="container " id='portfolio-background'>
       <div class="row">
         <section class="col-md-12">
           <h2>Portfolio</h2>
           <hr />
         </section>
       </div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
+      <div class="row mb-3">
+
+        <div class="col-md-6">
 
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner mt-1">
@@ -72,22 +76,42 @@
                   height="400" class="d-block w-100" alt="League of Legends">
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+
           </div>
         </div>
+
         <div class='col-md-2'></div>
+        <div class='col-md-4'>
+
+          <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner mt-1">
+              <div class="carousel-item active">
+                <img
+                  src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/103675143_1189502188065757_4644825641805150736_o.jpg?_nc_cat=106&_nc_sid=84a396&_nc_ohc=eEvAWcuNsOUAX_vHWSa&_nc_ht=scontent-iad3-1.xx&oh=459bef515b2e50f6304eb43162429001&oe=5F7DE7CD"
+                  height="400" class="d-block w-100" alt="Turbo S2000">
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="https://scontent-iad3-1.xx.fbcdn.net/v/t31.0-8/15625867_387574844925166_3268344302101688288_o.jpg?_nc_cat=107&_nc_sid=8bfeb9&_nc_ohc=DhYrnQcwh3QAX8DJm9A&_nc_ht=scontent-iad3-1.xx&oh=11761cdc198667fc0b0e4ec911b5d729&oe=5F7DCB7D"
+                  height="400" class="d-block w-100" alt="Diploma from NC State University">
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="https://scontent-iad3-1.xx.fbcdn.net/v/t31.0-8/14067791_324995411183110_1137394166561367470_o.jpg?_nc_cat=106&_nc_sid=730e14&_nc_ohc=A6nrd_A3UVsAX8Kbbe0&_nc_ht=scontent-iad3-1.xx&oh=525eff5ddadefb2bc72491a3b322a1fe&oe=5F81047D"
+                  height="400" class="d-block w-100" alt="League of Legends">
+              </div>
+            </div>
+
+          </div>
+
+
+
+        </div>
       </div>
 
       <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 ">
+
+        <div class="col-md-6 ">
 
           <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner mt-1">
@@ -107,21 +131,38 @@
                   height="400" class="d-block w-100" alt="League of Legends">
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
         </div>
         <div class='col-md-2'></div>
+        <div class='col-md-4'>
+
+          <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner mt-1">
+              <div class="carousel-item active">
+                <img
+                  src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/103675143_1189502188065757_4644825641805150736_o.jpg?_nc_cat=106&_nc_sid=84a396&_nc_ohc=eEvAWcuNsOUAX_vHWSa&_nc_ht=scontent-iad3-1.xx&oh=459bef515b2e50f6304eb43162429001&oe=5F7DE7CD"
+                  height="400" class="d-block w-100" alt="Turbo S2000">
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="https://scontent-iad3-1.xx.fbcdn.net/v/t31.0-8/15625867_387574844925166_3268344302101688288_o.jpg?_nc_cat=107&_nc_sid=8bfeb9&_nc_ohc=DhYrnQcwh3QAX8DJm9A&_nc_ht=scontent-iad3-1.xx&oh=11761cdc198667fc0b0e4ec911b5d729&oe=5F7DCB7D"
+                  height="400" class="d-block w-100" alt="Diploma from NC State University">
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="https://scontent-iad3-1.xx.fbcdn.net/v/t31.0-8/14067791_324995411183110_1137394166561367470_o.jpg?_nc_cat=106&_nc_sid=730e14&_nc_ohc=A6nrd_A3UVsAX8Kbbe0&_nc_ht=scontent-iad3-1.xx&oh=525eff5ddadefb2bc72491a3b322a1fe&oe=5F81047D"
+                  height="400" class="d-block w-100" alt="League of Legends">
+              </div>
+            </div>
+
+          </div>
+
+
+        </div>
       </div>
     </div>
-     <br><br><br>
-     <br><br><br>
+    <br><br><br>
+    <br><br><br>
 
 
   </main>
