added padding to my container background color and fixed up about me page with some line spacing in the index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
   <style>
     p {
-      line-height: 3;
+      line-height: 2.7;
+    }
+
+    #indent {
+      margin-left: 1.3%;
     }
   </style>
 
@@ -77,17 +81,22 @@
             thanks to my many years in the Pharma Indsutry. I also am a self motivating
             individual with great time management skills. I look forward to utilizing all the skills I have learned in
             the past in my future endevours.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati cupiditate molestias est, et
-            autem atque voluptatum minima!. A sapiente totam aspernatur repellat cupiditate deserunt nam quidem illo,
-            voluptate ratione!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium expedita blanditiis quaerat minus quasi
-            repellat fugit, consequatur quam enim veniam nemo facere a, ducimus laborum? Quod officia maiores
-            repudiandae cupiditate!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Totam voluptate illo ullam error at qui rerum omnis quos, menim praesentium excepturi quam tempore
+            voluptatum. Quod ullam doloribus explicabo ipsa laboriosam. Lorem ipsum
           </p>
 
 
         </div>
 
+        <div class='row'>
+          <div class='col-md-12 col-sm-11'>
+            <p id='indent'> dolor sit amet consectetur adipisicing elit. Ratione distinctio expedita alias veniam optio
+              temporibus. Sint quod illum et
+              voluptatibus adipisci deserunt sapiente fuga optio, voluptatem blanditiis provident possimus fugiat.
+            </p>
+          </div>
+        </div>
 
       </div>
 
