changed components on the navbar(color)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     #indent {
       margin-left: 1.3%;
     }
+
+    #aboutme-background {
+      padding-bottom: 1%;
+    }
   </style>
 
 </head>
@@ -29,7 +33,7 @@
 
   <header>
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark  bg-dark">
       <a class="navbar-brand" href="#"><i>Christopher Derteano</i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,8 +41,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+          <li class="nav-item ">
+            <a class="nav-link"  href="contact.html">Contact </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -80,10 +84,10 @@
             my passion in <abbr title="Software Engineering">SE</abbr>/coding. I have a strong analytical background
             thanks to my many years in the Pharma Indsutry. I also am a self motivating
             individual with great time management skills. I look forward to utilizing all the skills I have learned in
-            the past in my future endevours.
+            the past, in my future endevours. I ran out of things to say.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Totam voluptate illo ullam error at qui rerum omnis quos, menim praesentium excepturi quam tempore
-            voluptatum. Quod ullam doloribus explicabo ipsa laboriosam. Lorem ipsum
+            voluptatum. Quod ullam doloribus explicabo ipsa
           </p>
 
 
@@ -91,7 +95,7 @@
 
         <div class='row'>
           <div class='col-md-12 col-sm-11'>
-            <p id='indent'> dolor sit amet consectetur adipisicing elit. Ratione distinctio expedita alias veniam optio
+            <p id='indent'>   laboriosam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione distinctio expedita alias veniam optio
               temporibus. Sint quod illum et
               voluptatibus adipisci deserunt sapiente fuga optio, voluptatem blanditiis provident possimus fugiat.
             </p>
