--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
   </div>
   <header>
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark  bg-dark">
       <a class="navbar-brand" href="#"><i>Christopher Derteano</i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,8 +29,8 @@
       <div class="collapse navbar-collapse" id="navbarNav">
 
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+          <li class="nav-item ">
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
