formatted all documents and centered all mains on page with a style css padding

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
   </header>
 
 
-  <main>
+  <main class='mt-4'>
     <div class="container " id='portfolio-background'>
       <div class="row">
         <section class="col-md-12">
