--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,11 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title>Portfolio</title>
+  <style>
+    main {
+      padding: 2.5%;
+    }
+  </style>
 </head>
 
 <body>
@@ -42,7 +47,7 @@
 
   </header>
 
-  <main>
+  <main class='mt-5'>
     <!--Section: Contact v.2-->
     <section class="container" id='contact-background'>
 
