--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     #aboutme-background {
       padding-bottom: 1%;
     }
+
+    main {
+      padding: 2.5%;
+    }
   </style>
 
 </head>
@@ -42,7 +46,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item ">
-            <a class="nav-link"  href="contact.html">Contact </a>
+            <a class="nav-link" href="contact.html">Contact </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -95,7 +99,8 @@
 
         <div class='row'>
           <div class='col-md-12 col-sm-11'>
-            <p id='indent'>   laboriosam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione distinctio expedita alias veniam optio
+            <p id='indent'> laboriosam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione distinctio
+              expedita alias veniam optio
               temporibus. Sint quod illum et
               voluptatibus adipisci deserunt sapiente fuga optio, voluptatem blanditiis provident possimus fugiat.
             </p>
