added the resume anchor tag to all html pages and reformatted

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,8 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">About</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link" href="./Resume/Christopher Derteano. (2).pdf">Resume</a>
           </li>
         </ul>
       </div>
