added project 2 into the slider with a source that takes you to the repo which also includes the heroku deployment link

--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
             <div class="about-text">
                 <p>About Me</p> <br>
                 <p>Devolper </p> <br>
-                <p>Hello,My name is Christopher Derteano. I am a Full Stack Developer.If you have any Projects or if
-                    you want to make a software for your buisness conatact me.I will reassure you, you will really like
-                    my
-                    work</p> <br>
-                <p>I am a Devolper and also a Designer.If you have any Project or if you want make a software for your
-                    buisness conatact me..</p> <br>
+                <p>Hello, My name is Christopher Derteano. I am a Full Stack Developer. I am also a student at the UNC coding bootcamp. Feel
+                    free to contact me for any job related questions.
+                </p> <br>
+                <p>I am a Devolper aswell as a Designer. If you have any Projects or if you want make a software for your
+                    buisness contact me..</p> <br>
                 <button>Hire Me</button>
                 <button id="portfolio"><a class="" href="./Resume/Christopher Derteano. (2).pdf">Download
                         CV</a></button>
@@ -92,11 +91,23 @@
                 <!-- slider 3 -->
                 <div class="swiper-slide">
                     <div class="port-text">
-                        <h4><span class="reveal">Wander+Plus</span></h4>
+                        <h4><span class="reveal">Garage-Swap</span></h4>
                     </div>
                     <a href="https://github.com/jamescbaldwin/WANDER-PLUS" target="_blank">
                         <div class="port-img" id="img3">
                             <img src="images/wanderplus2.JPG" alt="3">
+                        </div>
+                    </a>
+                </div>
+
+                 <!-- slider 4 -->
+                 <div class="swiper-slide">
+                    <div class="port-text">
+                        <h4><span class="reveal">Wander+Plus</span></h4>
+                    </div>
+                    <a href="https://github.com/jamescbaldwin/DEMO100" target="_blank">
+                        <div class="port-img" id="img4">
+                            <img src="images/garageswap.JPG" alt="4">
                         </div>
                     </a>
                 </div>
